--- a/docker/.env
+++ b/docker/.env
@@ -29,10 +29,13 @@ DATABASE_DIALECT=postgresql
 POSTGRES_DB=superset
 POSTGRES_USER=superset
 POSTGRES_PASSWORD=superset
-#MYSQL_DATABASE=superset
-#MYSQL_USER=superset
-#MYSQL_PASSWORD=superset
-#MYSQL_RANDOM_ROOT_PASSWORD=yes
+
+MYSQL_DATABASE=superset
+MYSQL_USER=superset
+MYSQL_PASSWORD=superset
+MYSQL_ROOT_PASSWORD=123456
+# MYSQL_ALLOW_EMPTY_PASSWORD=false
+# MYSQL_RANDOM_ROOT_PASSWORD=no
 
 # Add the mapped in /app/pythonpath_docker which allows devs to override stuff
 PYTHONPATH=/app/pythonpath:/app/docker/pythonpath_dev
