updating gitignore and dev env .docker

--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -31,7 +31,7 @@ version: "3.7"
 services:
   redis:
     image: redis:latest
-    container_name: superset_cache
+    container_name: superset_cache_dev
     restart: unless-stopped
     ports:
       - "127.0.0.1:6379:6379"
@@ -41,7 +41,7 @@ services:
   db:
     env_file: docker/.env
     image: postgres:14
-    container_name: superset_db
+    container_name: superset_db_dev
     restart: unless-stopped
     ports:
       - "127.0.0.1:5432:5432"
@@ -51,7 +51,7 @@ services:
   mysql:
     env_file: docker/.env
     image: mysql:latest
-    container_name: mysql_db
+    container_name: mysql_db_dev
     # command: ["/app/docker/docker-mysql.sh"]
     restart: unless-stopped
     ports:
@@ -71,7 +71,7 @@ services:
   superset:
     env_file: docker/.env
     image: *superset-image
-    container_name: superset_app
+    container_name: superset_app_dev
     command: ["/app/docker/docker-bootstrap.sh", "app"]
     restart: unless-stopped
     ports:
@@ -83,7 +83,7 @@ services:
       CYPRESS_CONFIG: "${CYPRESS_CONFIG}"
 
   superset-websocket:
-    container_name: superset_websocket
+    container_name: superset_websocket_dev
     build: ./superset-websocket
     image: superset-websocket
     ports:
@@ -112,7 +112,7 @@ services:
 
   superset-init:
     image: *superset-image
-    container_name: superset_init
+    container_name: superset_init_dev
     command: ["/app/docker/docker-init.sh"]
     env_file: docker/.env
     depends_on: *superset-depends-on
@@ -123,7 +123,7 @@ services:
 
   superset-node:
     image: node:16
-    container_name: superset_node
+    container_name: superset_node_dev
     command: ["/app/docker/docker-frontend.sh"]
     env_file: docker/.env
     depends_on: *superset-depends-on
@@ -131,7 +131,7 @@ services:
 
   superset-worker:
     image: *superset-image
-    container_name: superset_worker
+    container_name: superset_worker_dev
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
     env_file: docker/.env
     restart: unless-stopped
@@ -144,7 +144,7 @@ services:
 
   superset-worker-beat:
     image: *superset-image
-    container_name: superset_worker_beat
+    container_name: superset_worker_beat_dev
     command: ["/app/docker/docker-bootstrap.sh", "beat"]
     env_file: docker/.env
     restart: unless-stopped
@@ -154,7 +154,7 @@ services:
 
   superset-tests-worker:
     image: *superset-image
-    container_name: superset_tests_worker
+    container_name: superset_tests_worker_dev
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
     env_file: docker/.env
     environment:
