--- a/superset-frontend/plugins/superset-plugin-chart-table-tick/package.json
+++ b/superset-frontend/plugins/superset-plugin-chart-table-tick/package.json
@@ -15,7 +15,7 @@
     "build-cjs": "babel src --extensions \".ts,.tsx,.js,.jsx\" --copy-files --out-dir lib",
     "build-clean": "npm run clean && npm run build",
     "build-esm": "BABEL_OUTPUT=esm babel src --extensions \".ts,.tsx,.js,.jsx\" --copy-files --out-dir esm",
-    "dev": "BABEL_OUTPUT=esm babel src --extensions \".ts,.tsx,.js,.jsx\" --watch --copy-files --out-dir esm",
+    "dev": "babel src --extensions \".ts,.tsx,.js,.jsx\" --watch --copy-files --out-dir esm",
     "prebuild": "rimraf {lib,esm,tsconfig.tsbuildinfo}",
     "postbuild": "npm run test",
     "ts-types": "tsc --build",
@@ -26,7 +26,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {},
   "peerDependencies": {
     "@superset-ui/chart-controls": "*",
     "@superset-ui/core": "*",
@@ -34,7 +33,10 @@
   },
   "devDependencies": {
     "@airbnb/config-babel": "^2.0.1",
-    "@babel/cli": "^7.16.0",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3",
+    "@babel/node": "^7.19.1",
+    "@babel/preset-env": "^7.19.4",
     "@types/jest": "^26.0.4",
     "jest": "^26.6.3",
     "rimraf": "^3.0.2",
