--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -202,7 +202,7 @@
     "rison": "^0.1.1",
     "scroll-into-view-if-needed": "^2.2.28",
     "shortid": "^2.2.6",
-    "superset-plugin-chart-table-tick": "file:plugins/superset-plugin-chart-table-tick",
+    "superset-plugin-chart-table-tick": "^0.1.0",
     "tinycolor2": "^1.4.2",
     "urijs": "^1.19.8",
     "use-immer": "^0.6.0",
