trying to fix eslint issues

--- a/superset-frontend/plugins/superset-plugin-chart-table-tick/tsconfig.json
+++ b/superset-frontend/plugins/superset-plugin-chart-table-tick/tsconfig.json
@@ -31,7 +31,8 @@
     "types": ["jest"],
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "noImplicitAny": false
   },
   "exclude": [
     "lib",
