--- a/superset-frontend/plugins/superset-plugin-chart-table-tick/package.json
+++ b/superset-frontend/plugins/superset-plugin-chart-table-tick/package.json
@@ -41,5 +41,9 @@
     "jest": "^26.6.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "memoize-one": "^6.0.0",
+    "xss": "^1.0.14"
   }
 }
