--- a/superset-frontend/plugins/superset-plugin-chart-table-checkbox/package.json
+++ b/superset-frontend/plugins/superset-plugin-chart-table-checkbox/package.json
@@ -32,11 +32,13 @@
     "react": "^16.13.1"
   },
   "devDependencies": {
-    "@airbnb/config-babel": "^2.0.1",
     "@babel/cli": "^7.16.0",
     "@types/jest": "^26.0.4",
     "jest": "^26.6.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "@airbnb/config-babel": "^2.0.1"
   }
 }
