--- a/superset-frontend/plugins/superset-plugin-chart-table-tick/package.json
+++ b/superset-frontend/plugins/superset-plugin-chart-table-tick/package.json
@@ -32,7 +32,6 @@
     "react": "^16.13.1"
   },
   "devDependencies": {
-    "@airbnb/config-babel": "^2.0.1",
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
     "@babel/node": "^7.19.1",
@@ -43,7 +42,13 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@airbnb/config-babel": "^2.0.1",
+    "@react-icons/all-files": "^4.1.0",
+    "@types/d3-array": "^3.0.3",
+    "@types/react-table": "^7.7.12",
+    "match-sorter": "^6.3.1",
     "memoize-one": "^6.0.0",
+    "regenerator-runtime": "^0.13.11",
     "xss": "^1.0.14"
   }
 }
