--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ env_py3
 envpy3
 env36
 local_config.py
-/superset_config.py
+# /superset_config.py
 /superset_text.yml
 superset.egg-info/
 superset/bin/supersetc
